# bazel-registry

./: README.md
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml  prod.yml  test.yml
modules/brotli/: metadata.json
modules/brotli/1.2.0/: MODULE.bazel  source.json
modules/brotli/1.2.0/overlay/: BUILD.bazel
modules/double-conversion/: metadata.json
modules/double-conversion/3.4.0/: MODULE.bazel  source.json
modules/double-conversion/3.4.0/overlay/: BUILD
modules/fizz/: metadata.json
modules/fizz/2026.05.04.00/: MODULE.bazel  source.json
modules/fizz/2026.05.11.00/: MODULE.bazel  source.json
modules/fizz/2026.05.18.00/: MODULE.bazel  source.json
modules/fizz/2026.05.18.00/overlay/: BUILD.bazel
modules/fizz/2026.05.25.00/: MODULE.bazel  source.json
modules/fizz/2026.05.25.00/overlay/: BUILD.bazel
modules/folly/: metadata.json
modules/folly/2026.05.04.00/: source.json
modules/folly/2026.05.11.00/: MODULE.bazel  source.json
modules/folly/2026.05.18.00/: MODULE.bazel  source.json
modules/folly/2026.05.25.00/: MODULE.bazel  source.json
modules/libaegis/: metadata.json
modules/libaegis/0.10.1/: MODULE.bazel  source.json
modules/liboqs/: metadata.json
modules/liboqs/0.15.0/: MODULE.bazel  source.json
modules/libsodium/: metadata.json
modules/libsodium/1.0.22/: MODULE.bazel  source.json
modules/liburing/: metadata.json
modules/liburing/2.14.ebr.1/: MODULE.bazel  source.json
modules/mbedtls/: metadata.json
modules/mbedtls/4.1.0/: MODULE.bazel  source.json
modules/mvfst/: metadata.json
modules/mvfst/2026.05.25.00/: MODULE.bazel  source.json
modules/proxygen/: metadata.json
modules/proxygen/2026.05.25.00/: MODULE.bazel  source.json
modules/snappy/: metadata.json
modules/snappy/1.2.2/: MODULE.bazel  source.json
modules/wangle/: metadata.json
modules/wangle/2026.05.04.00/: MODULE.bazel  source.json
modules/wangle/2026.05.11.00/: MODULE.bazel  source.json
modules/wangle/2026.05.18.00/: MODULE.bazel  source.json
modules/wangle/2026.05.25.00/: MODULE.bazel  source.json
tests/brotli/: BUILD.bazel  MODULE.bazel  main.cpp
tests/double-conversion/: BUILD.bazel  MODULE.bazel  main.cpp
tests/fizz/: BUILD.bazel  MODULE.bazel  main.cpp
tests/folly/: BUILD.bazel  MODULE.bazel  main.cpp
tests/libaegis/: BUILD.bazel  MODULE.bazel  main.cpp
tests/liboqs/: BUILD.bazel  MODULE.bazel  main.cpp
tests/libsodium/: BUILD.bazel  MODULE.bazel  main.cpp
tests/liburing/: BUILD.bazel  MODULE.bazel  main.cpp
tests/mbedtls/: BUILD.bazel  MODULE.bazel  main.cpp
tests/mvfst/: BUILD.bazel  MODULE.bazel  main.cpp
tests/proxygen/: BUILD.bazel  MODULE.bazel  main.cpp
tests/snappy/: BUILD.bazel  MODULE.bazel  main.cpp
tests/wangle/: BUILD.bazel  MODULE.bazel  main.cpp
(+205 files in other folders)
