load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "test",
    srcs = ["main.cpp"],
    deps = ["@proxygen//proxygen:httpserver"],
)

test_suite(
    name = "tests",
    tests = [
        "@proxygen//proxygen/lib/utils/test:AsyncTimeoutSetTest",
        "@proxygen//proxygen/lib/utils/test:TraceEventTest",
        "@proxygen//proxygen/lib/utils/test:UtilTests",
    ],
)
