load("@rules_cc//cc:defs.bzl", "cc_binary")

cc_binary(
    name = "test",
    srcs = ["main.cpp"],
    deps = [
        "@folly//folly/io:iobuf",
        "@wangle//wangle/bootstrap:server_bootstrap",
        "@wangle//wangle/channel:pipeline",
    ],
)

test_suite(
    name = "tests",
    tests = [
        "@wangle//wangle/util/test:FilePollerTest",
    ],
)
